--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,1 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
+@font-face{font-family:Editorial Grotesk;src:url(fonts/EditorialGrotesk.woff2) format("woff2"),url(fonts/EditorialGrotesk.ttf) format("truetype");font-weight:400;font-style:normal}.link,.link:active,.link:focus,.link:hover,.link:visited{color:#00f;text-decoration:none}*{box-sizing:border-box}body,html{margin:0;padding:0;font-size:18px;line-height:18px;font-family:Editorial Grotesk}#root,body,html{width:100%;height:100%}#root{position:relative}.root-inner{padding:0 16px}.base-container{position:relative;height:100%;width:100%;display:block}.header-wrap{position:fixed;top:0;width:100%;z-index:99}.header-inner,.header-logo--link{position:relative;display:block}.header-logo--link{width:56px;height:56px}.header-logo--img{width:100%}.header-logo--img,.header-nav,.header-nav--item{position:relative;display:block}.header-nav--item{width:100%}.header-nav--link{position:relative;display:flex;flex-direction:column;justify-content:space-between;height:36px}.header-nav--link,.header-nav--link:active,.header-nav--link:focus,.header-nav--link:visited{text-decoration:none}.header-nav--item-title{color:#000;padding-bottom:3px;border-bottom:1px solid #fff}.header-nav--item-sub-title{color:#fff;font-size:10px;line-height:10px}.main-wrap{position:relative;background-color:#b0b6bb;display:grid;height:100%;padding:0 20px;grid-template-columns:repeat(2,minmax(auto,1fr));grid-column-gap:20px}@media (min-width:984px){.header-inner{display:grid;padding:87px 60px 0;grid-template-columns:repeat(8,minmax(auto,1fr));grid-column-gap:20px}.header-nav{grid-column:5/9;display:grid;grid-template-columns:repeat(4,minmax(auto,1fr));grid-column-gap:20px}.main-wrap{padding:0 60px;grid-template-columns:repeat(8,minmax(auto,1fr))}}
