--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -24,7 +24,7 @@ html, body {
 
 .base-container {
   position: relative;
-  height: 100%;
   width: 100%;
   display: block;
+  background: #b0b6bb;
 }
