--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,7 @@
 @import './typography.css';
 @import './base.css';
 @import './header.css';
+@import './headerMob.css';
 @import './main.css';
+@import './footer.css';
+@import './about.css';
