--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,10 +3,22 @@
   top: 0;
   width: 100%;
   z-index: 99;
+  height: 100vh;
+  background: #000;
+  transition: transform .4s linear;
+  transform: translateX(100vw);
+
+  @media (min-width: 984px) {
+    height: auto;
+    background: transparent;
+    transform: none;
+  }
 }
 
 .header-inner {
   position: relative;
+  height: 100%;
+  padding: 0 30px;
   display: block;
 
   @media (min-width: 984px) {
@@ -18,6 +30,12 @@
 }
 
 .header-logo {
+  display: none;
+
+  @media (min-width: 984px) {
+    display: block;
+  }
+
   &--link {
     position: relative;
     display: block;
@@ -34,7 +52,11 @@
 
 .header-nav {
   position: relative;
-  display: block;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   @media (min-width: 984px) {
     grid-column: 5 / 9;
@@ -47,6 +69,15 @@
     position: relative;
     display: block;
     width: 100%;
+    padding-bottom: 35px;
+
+    &:last-of-type {
+      padding-bottom: 0px;
+    }
+
+    @media (min-width: 984px) {
+      padding-bottom: 0px;
+    }
   }
 
   &--link {
@@ -54,8 +85,12 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 36px;
     text-decoration: none;
+    height: 60px;
+
+    @media (min-width: 984px) {
+      height: 36px;
+    }
 
     &:active,
     &:focus,
@@ -65,14 +100,31 @@
   }
 
   &--item-title {
-    color: #000;
     padding-bottom: 3px;
     border-bottom: 1px solid #fff;
+    white-space: nowrap;
+    font-size: 32px;
+    line-height: 35px;
+    color: #fff;
+
+    @media (min-width: 984px) {
+      font-size: 18px;
+      line-height: 18px;
+      color: #000;
+    }
   }
 
   &--item-sub-title {
     color: #fff;
-    font-size: 10px;
-    line-height: 10px;
+    font-size: 13px;
+    line-height: 13px;
+    white-space: nowrap;
+    padding-top: 8px;
+
+    @media (min-width: 984px) {
+      padding-top: 0px;
+      font-size: 10px;
+      line-height: 10px;
+    }
   }
 }
