--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -9,6 +9,7 @@
     height: 168px;
     padding: 48px 60px 38px;
     grid-template-columns: repeat(8, minmax(auto, 1fr));
+    grid-column-gap: 30px;
   }
 }
 
