--- a/src/styles/history.css
+++ b/src/styles/history.css
@@ -4,6 +4,12 @@
   padding: 0 20px;
   grid-template-columns: repeat(2,minmax(auto,1fr));
   grid-column-gap: 20px;
+
+  @media (min-width: 984px) {
+    padding: 0 60px;
+    grid-template-columns: repeat(8, minmax(auto, 1fr));
+    grid-column-gap: 30px;
+  }
 }
 
 .history-inner {
@@ -11,6 +17,15 @@
   display: block;
   grid-column: span 2;
   padding-top: 35px;
+
+  @media (min-width: 984px) {
+    grid-column: span 8;
+    padding-top: calc(179px + 143px);
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(8, minmax(10%,1fr));
+    grid-column-gap: 30px;
+  }
 }
 
 .history-slider {
@@ -19,7 +34,6 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
-  padding-bottom: 20px;
 
   &--wrap {
     position: relative;
@@ -28,6 +42,13 @@
     flex-direction: column;
     width: calc(100% + 20px);
     margin-bottom: 53px;
+
+    @media (min-width: 984px) {
+      grid-row: 1;
+      grid-column: 2/9;
+      width: calc(100% + 60px);
+      margin-bottom: 66px;
+    }
   }
 
   &--desc {
@@ -62,6 +83,14 @@
 }
 
 .history-text {
+  &--wrap {
+    @media (min-width: 984px) {
+      grid-row: 2;
+      grid-column: 2/9;
+      width: 100%;
+    }
+  }
+
   &--title {
     font-family: Editorial Grotesk ;
     font-style: normal;
@@ -71,6 +100,11 @@
     letter-spacing: -0.05em;
     text-transform: uppercase;
     color: #FFFFFF;
+
+    @media (min-width: 984px) {
+      font-size: 64px;
+      line-height: 59px;
+    }
   }
 
   &--self {
@@ -87,10 +121,24 @@
     padding-top: 37px;
     padding-bottom: 64px;
 
+    @media (min-width: 984px) {
+      margin-left: 0px;
+      font-size: 24px;
+      line-height: 36px;
+      padding-top: 70px;
+      display: grid;
+      grid-template-columns: repeat(7, minmax(10%,1fr));
+      grid-column-gap: 30px;
+    }
+
     p {
       font: inherit;
       margin: 0;
       margin-bottom: 53px;
+
+      @media (min-width: 984px) {
+        margin-bottom: 30px !important;
+      }
 
       &:last-of-type {
         margin-bottom: 0px;
@@ -102,6 +150,17 @@
     position: relative;
     display: block;
     padding-bottom: 53px;
+
+    @media (min-width: 984px) {
+      grid-column: span 7;
+      display: grid;
+      grid-template-columns: repeat(7, minmax(10%,1fr));
+      grid-column-gap: 30px;
+
+      p {
+        grid-column: 2/5;
+      }
+    }
   }
 
   &--year {
@@ -116,5 +175,44 @@
     letter-spacing: -0.05em;
     text-transform: uppercase;
     color: #FFFFFF;
+
+    @media (min-width: 984px) {
+      position: relative;
+      left: auto;
+      grid-column: 1;
+      font-size: 64px;
+      line-height: 59px;
+    }
+  }
+
+  &--pictures-wrap {
+    display: none;
+
+    @media (min-width: 984px) {
+      position: relative;
+      grid-column: 5/8;
+      grid-row: 1/5;
+      display: block;
+      width: 100%;
+    }
+  }
+
+  &--pictures-single {
+    position: relative;
+    display: inline-block;
+    width: calc((100% - 60px) / 3);
+    margin-right: 30px;
+    margin-bottom: 30px;
+    cursor: pointer;
+
+    &:nth-of-type(3n) {
+      margin-right: 0;
+    }
+
+    img {
+      position: relative;
+      display: block;
+      width: 100%;
+    }
   }
 }
