--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,6 +8,7 @@
   @media (min-width: 984px) {
     padding: 0 60px;
     grid-template-columns: repeat(8, minmax(auto, 1fr));
+    grid-column-gap: 30px;
   }
 }
 
