--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,9 +12,42 @@
   }
 }
 
+.main-image-mob {
+  position: relative;
+  grid-column: span 2;
+  width: 100vw;
+  height: calc(100vh - 162px);
+  left: -20px;
+
+  &--background {
+    position: absolute;
+    display: block;
+    width: 100%;
+    top: -162px;
+    height: 100vh;
+    background-image: url('./assets/background-mob.jpg');
+    background-size: cover;
+    background-position: center center;
+  }
+
+  &--item {
+    position: absolute;
+    display: block;
+    width: auto;
+    top: -162px;
+    height: 100vh;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  @media (min-width: 984px) {
+    display: none;
+  }
+}
+
 .main-image {
   position: relative;
-  display: block;
+  display: none;
   grid-column: span 2;
   width: 100vw;
   padding-top: calc(100vh - 207px);
@@ -22,6 +55,7 @@
   overflow: hidden;
 
   @media (min-width: 984px) {
+    display: block;
     padding-top: 100vh;
     grid-column: span 8;
     left: -60px;
@@ -40,10 +74,11 @@
     transition: opacity .4s linear; */
 
     @media (min-width: 984px) {
-      width: 105%;
+      width: 75%;
       left: 50%;
-      top: 60%;
-      transform: translate(-50%,-50%);
+      top: auto;
+      bottom: 0;
+      transform: translateX(-50%);
     }
   }
 }
@@ -78,31 +113,15 @@
   &--wrap {
     position: relative;
     padding-top: 42px;
+    z-index: 1;
 
     @media (min-width: 984px) {
       position: absolute;
       padding-top: 0px;
-      left: 50%;
-      top: 60vh;
-      transform: translateX(-50%);
-      z-index: 1;
+      left: 60px;
+      top: 173px;
       text-align: center;
     }
-  }
-
-  &--fields {
-    position: relative;
-    display: block;
-    width: 100%;
-    font-family: Editorial Grotesk ;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 36px;
-    line-height: 45px;
-    letter-spacing: -0.05em;
-    text-transform: uppercase;
-    font-feature-settings: 'tnum' on, 'onum' on;
-    color: #000000;
   }
 
   &--mutabor {
@@ -111,9 +130,9 @@
 
     @media (min-width: 984px) {
       display: block;
-      width: 70px;
-      margin: 0 auto;
-      padding-top: 87px;
+      width: 60px;
+      padding-top: 57px;
+      margin-left: 5px;
     }
   }
 }
@@ -123,9 +142,11 @@
     position: relative;
     display: block;
     grid-column: span 2;
+    padding-top: 40px;
 
     @media (min-width: 984px) {
       grid-column: span 8;
+      padding-top: 0px;
     }
   }
 
