--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -13,23 +13,23 @@
   }
 
   @media (min-width: 984px) {
+    background: #b0b6bb;
     height: auto;
-    background: transparent;
     transform: none;
+    padding: 0 60px;
   }
 }
 
 .header-inner {
   position: relative;
   height: 100%;
-  padding: 0 30px;
   display: block;
+  padding: 0 30px;
 
   @media (min-width: 984px) {
-    background: linear-gradient(75deg, #808f95, #c5ced4);
     border-bottom: 1px solid #fff;
     display: grid;
-    padding: 30px 60px;
+    padding: 30px 0px;
     grid-template-columns: repeat(8, minmax(auto, 1fr));
     grid-column-gap: 30px;
   }
@@ -39,7 +39,10 @@
   display: none;
 
   @media (min-width: 984px) {
-    display: block;
+    display: flex;
+    align-items: center;
+    padding-left: 35px;
+    grid-column: span 4;
   }
 
   &--link {
@@ -53,6 +56,48 @@
     position: relative;
     display: block;
     width: 100%;
+  }
+
+  &--date-wrap {
+    display: none;
+
+    @media (min-width: 984px) {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      padding-left: 65px;
+    }
+  }
+
+  &--date {
+    font-family: Editorial Grotesk ;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 24px;
+    color: #FFFFFF;
+  }
+
+  &--date-separate {
+    padding: 0 5px;
+    width: 27px;
+    height: 54px;
+
+    svg {
+      position: relative;
+      display: block;
+      width: 100%;
+    }
+  }
+
+  &--date-address {
+    font-family: Editorial Grotesk ;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 17px;
+    letter-spacing: 0.01em;
+    color: #FFFFFF;
   }
 }
 
@@ -117,7 +162,7 @@
     @media (min-width: 984px) {
       font-size: 18px;
       line-height: 18px;
-      color: #000;
+      border-bottom: 1px solid #000;
     }
   }
 
@@ -132,6 +177,7 @@
       padding-top: 0px;
       font-size: 10px;
       line-height: 10px;
+      color: #000;
     }
   }
 }
