--- a/src/styles/history.css
+++ b/src/styles/history.css
@@ -20,11 +20,34 @@
 
   @media (min-width: 984px) {
     grid-column: span 8;
-    padding-top: calc(179px + 143px);
+    padding-top: calc(117px + 70px);
     display: grid;
     width: 100%;
     grid-template-columns: repeat(8, minmax(10%,1fr));
     grid-column-gap: 30px;
+  }
+}
+
+.history-title {
+  &--wrap {
+    position: relative;
+    font-family: Editorial Grotesk ;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 64px;
+    line-height: 60px;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    font-feature-settings: 'tnum' on, 'onum' on;
+    color: #000000;
+
+    @media (min-width: 984px) {
+      font-size: 88px;
+      line-height: 88px;
+      margin-bottom: 75px;
+      grid-row: 1;
+      grid-column: 2 / 9;
+    }
   }
 }
 
@@ -44,7 +67,7 @@
     margin-bottom: 53px;
 
     @media (min-width: 984px) {
-      grid-row: 1;
+      grid-row: 2;
       grid-column: 2/9;
       width: calc(100% + 60px);
       margin-bottom: 66px;
@@ -85,8 +108,8 @@
 .history-text {
   &--wrap {
     @media (min-width: 984px) {
-      grid-row: 2;
-      grid-column: 2/9;
+      grid-row: 3;
+      grid-column: span 8;
       width: 100%;
     }
   }
@@ -127,7 +150,7 @@
       line-height: 24px;
       padding-top: 70px;
       display: grid;
-      grid-template-columns: repeat(7, minmax(10%,1fr));
+      grid-template-columns: repeat(8, minmax(10%,1fr));
       grid-column-gap: 30px;
     }
 
@@ -162,13 +185,13 @@
     padding-bottom: 53px;
 
     @media (min-width: 984px) {
-      grid-column: span 7;
+      grid-column: span 8;
       display: grid;
-      grid-template-columns: repeat(7, minmax(10%,1fr));
+      grid-template-columns: repeat(8, minmax(10%,1fr));
       grid-column-gap: 30px;
 
       p {
-        grid-column: 2/5;
+        grid-column: 3/6;
       }
     }
   }
@@ -185,13 +208,43 @@
     letter-spacing: -0.05em;
     text-transform: uppercase;
     color: #FFFFFF;
+    text-align: right;
 
     @media (min-width: 984px) {
       position: relative;
       left: auto;
-      grid-column: 1;
+      grid-column: 2;
       font-size: 64px;
       line-height: 59px;
+    }
+
+    span.date {
+      position: relative;
+      display: block;
+      font-family: Editorial Grotesk ;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 23px;
+      line-height: 20px;
+      text-align: right;
+      letter-spacing: -0.02em;
+      color: #1C1A19;
+      padding-top: 22px;
+    }
+
+    span.place {
+      position: relative;
+      display: block;
+      font-family: Editorial Grotesk ;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 15px;
+      line-height: 17px;
+      text-align: right;
+      color: #1C1A19;
+      padding-top: 22px;
+      text-transform: capitalize;
+      letter-spacing: 0;
     }
   }
 
@@ -200,7 +253,7 @@
 
     @media (min-width: 984px) {
       position: relative;
-      grid-column: 5/8;
+      grid-column: 6/9;
       grid-row: 1/5;
       display: block;
       width: 100%;
@@ -218,6 +271,36 @@
     &:nth-of-type(3n) {
       margin-right: 0;
     }
+
+    img {
+      position: relative;
+      display: block;
+      width: 100%;
+    }
+  }
+}
+
+.history-splash {
+  &--01 {
+    position: absolute;
+    display: block;
+    width: calc((100% - 90px)/8*2);
+    left: -60px;
+    bottom: 17%;
+
+    img {
+      position: relative;
+      display: block;
+      width: 100%;
+    }
+  }
+
+  &--02 {
+    position: absolute;
+    display: block;
+    width: calc((100% - 60px)/8*2.5);
+    right: 0;
+    bottom: calc(53px + 4%);
 
     img {
       position: relative;
