--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -48,8 +48,8 @@
   &--link {
     position: relative;
     display: block;
-    width: 56px;
-    height: 56px;
+    width: 146px;
+    height: 44px;
   }
 
   &--img {
@@ -65,7 +65,6 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      padding-left: 65px;
     }
   }
 
@@ -79,7 +78,7 @@
   }
 
   &--date-separate {
-    padding: 0 5px;
+    margin: 0 5px;
     width: 27px;
     height: 54px;
 
