--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -250,7 +250,7 @@
 
   &--artist {
     position: relative;
-    display: inline-block;
+    display: unset;
     font-family: Editorial Grotesk ;
     font-style: normal;
     font-weight: normal;
@@ -264,6 +264,8 @@
     @media (min-width: 984px) {
       font-size: 36px;
       line-height: 48px;
+      padding-right: 7px;
+      padding-top: 7px;
     }
 
     &:hover {
