--- a/src/styles/partners.css
+++ b/src/styles/partners.css
@@ -86,7 +86,7 @@
     flex-direction: column;
 
     &:nth-of-type(1) {
-      width: 30%;
+      width: calc(30% + 150px);
       padding-right: 150px;
     }
 
